# pybhspc

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  meson.build  meson_options.txt  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yml
api/: index.html
api_spcm/: index.html
development/: index.html
docs/: api.md  api_spcm.md  development.md  getting_started.py  index.md
docs/stylesheets/: extra.css
getting_started/: index.html
search/: search_index.json
src/bh_spc/: __init__.py  _dump_state.py  _file_version.pyx  _ini_files.py  _spcm.pxd  _version.py.in  _win32_version.pxd  meson.build  spcm.pyx
stylesheets/: extra.css
subprojects/: .gitignore  spcm-dll.wrap
subprojects/packagefiles/spcm-dll/: meson.build
tests/: conftest.py  test_dll_version.py  test_dump_state.py  test_ini_files.py  test_spcm.py  test_version.py
